--- a/blog/_sass/minima/_base.scss
+++ b/blog/_sass/minima/_base.scss
@@ -237,16 +237,20 @@ table {
   color: lighten($text-color, 18%);
   border-collapse: collapse;
   border: 1px solid $grey-color-light;
+  font-weight: 300;
+  font-stretch: semi-condensed;
   tr {
     &:nth-child(even) {
-      background-color: lighten($grey-color-light, 6%);
+      background-color: lighten($grey-color-dark, 3%) ;// dark mode
+      background-color: lighten($background-color, 6%);
     }
   }
   th, td {
     padding: ($spacing-unit / 3) ($spacing-unit / 2);
   }
   th {
-    background-color: lighten($grey-color-light, 3%);
+    background-color: $background-color;
+    // background-color: lighten($grey-color-light, 3%);
     border: 1px solid darken($grey-color-light, 4%);
     border-bottom-color: darken($grey-color-light, 12%);
   }
