Add hero image.

--- a/blog/_includes/footer.html
+++ b/blog/_includes/footer.html
@@ -15,8 +15,8 @@
               {{ site.title | escape }}
             {%- endif -%}
             </li>
-            {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+            {%- if site.contact -%}
+            <li><a class="u-email" href="mailto:{{ site.contact }}">{{ site.contact }}</a></li>
             {%- endif -%}
         </ul>
       </div>
