Change image width for bio.

--- a/blog/_sass/minima/_layout.scss
+++ b/blog/_sass/minima/_layout.scss
@@ -228,7 +228,14 @@ html {
   }
 }
 
-
+/**
+ * Bio images
+ */
+.post-content img {
+  display: block;
+  margin: auto;
+  max-width: 60%;
+}
 /**
  * Posts
  */
